--- a/docker-compose-peer0.yaml
+++ b/docker-compose-peer0.yaml
@@ -10,6 +10,7 @@ volumes:
 
 networks:
   byfn:
+
 services:
   ca0:
     image: hyperledger/fabric-ca:$IMAGE_TAG
@@ -48,11 +49,12 @@ services:
     container_name: cli
     image: hyperledger/fabric-tools:$IMAGE_TAG
     tty: true
-    dns_search: .
+    stdin_open: true
     environment:
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_LOGGING_LEVEL=DEBUG
+      #- CORE_LOGGING_LEVEL=DEBUG
+      - CORE_LOGGING_LEVEL=INFO
       - CORE_PEER_ID=cli
       - CORE_PEER_ADDRESS=peer0.org1.arbi.com:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
